# mimiclaw

./: README.md  README_CN.md  README_JA.md  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  idf_component.yml  mimi.c  mimi_config.h
main/agent/: context_builder.c
main/cli/: serial_cli.c
main/ui/: config_screen.c
